@@ -345,6 +345,7 @@ namespace libtorrent
 	}
 
 #if TORRENT_USE_WSTRING
+#ifndef TORRENT_NO_DEPRECATE
 	void torrent_handle::move_storage(
 		std::wstring const& save_path, int flags) const
 	{
@@ -361,6 +362,7 @@ namespace libtorrent
 		wchar_utf8(new_name, utf8);
 		TORRENT_ASYNC_CALL2(rename_file, index, utf8);
 	}
+#endif // TORRENT_NO_DEPRECATE
 #endif // TORRENT_USE_WSTRING
 
 	void torrent_handle::rename_file(int index, std::string const& new_name) const
